# scion

./: .gitignore  CLAUDE.md  LICENSE  README.md
scion/: README.md  TASK.md  launch_closure_validation.sh  pyproject.toml  run_closure_validation.py  run_cvrp_controlled_e2e.py  run_full_campaign.py  run_mock_campaign.py  run_sprint_f4.sh  run_v3_campaign.py  run_validation_campaign.py  run_w16_campaign.py
scion/campaign_v02_sprintA/: .scion_state.json  campaign_summary.json  scion.db
scion/design/: README.md  cc-design-reference.md  scion-v0.2-design.md  scion-v0.2-detailed-design.md  scion-v0.2-development-plan.md  scion-v0.2-refined-delivery-plan.md  scion-v0.2-review-notes.md  scion-v0.2-task-manifest.md  scion-v0.3-draft.md  scion-v0.3-glossary.md  sprint-ef-plan.md  sprint-f-design.md  validation-prereg.md
scion/docs/: AGENT_ONBOARDING.md  READING_PROFILES.md  README.md  campaign_summary.json  cc-prompt-engineering-analysis.md  evidence-manifest.md  experiment-baseline-management.md  experiment-quickref.md  glossary.md  metrics-guide.md  milp-model.md  milp-usage-strategy.md  prompt-improvement-plan.md  sprint-f-failure-analysis.md  sprint-f2-analysis-and-sprint-i.md  sprint-f4-analysis.md  sprint-f6-experiment-record.md  sprint-g-summary.md  sprint-h-plan.md  sprint-j-plan.md  sprint-j-v3-analysis.md  sprint-w16-optimization.md  v0.1-completion-report.md  v0.1-tuning-report.md  v0.2-completion-report.md  v0.2-final-state.md  v0.2-mvp-development-log.md  v0.3-closure-validation-20260425-analysis.md  v0.3-closure-validation-20260425-deep-analysis.md  v0.3-closure-validation-20260425-deep-analysis.zh.md  v0.3-code-audit-dataflow.md  (+33 more)
(+1336 files in other folders)
