[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scion"
version = "0.1.0"
description = "Scion Framework — autonomous operator optimization"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.9",
]

[project.scripts]
scion = "scion.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scion*"]

[tool.pytest.ini_options]
testpaths = ["scion/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-m 'not slow'"
markers = [
    "slow: long-running solver/MILP/integration tests excluded from the default suite",
    "integration: tests that exercise real subprocess solvers or full campaign wiring",
]
